<resources>
    <string name="app_name">DrinkingApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_string">Sign Up</string>
    <string name="signin_string">Sign In</string>
    <string name="enter_email_string">Enter a valid email</string>
    <string name="enter_password_string">Enter a valid password</string>
    <string name="enter_name_string">Enter your name</string>
    <string name="enter_last_name_string">Enter your last name</string>
    <string name="cancel_string">Cancel</string>
    <string name="profile_title">My Profile</string>
    <string name="name_string">Ruby Reynoso</string>
    <string name="email_string">rreynoso@u.rochester.edu</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="fullname_hint_string">Enter your fullname</string>
    <string name="email_hint_string">Enter your email</string>
    <string name="ok_string">OK</string>
    <string name="change_profile_pic_string">Change Picture</string>


    <string name="text_string">Text</string>
    <string name="cab_string">Call a Cab</string>
    <string name="emergency_string">EMERGENCY</string>
    <string name="valid_phone_hint_string">Enter a valid phone number</string>
    <string name="valid_message_hint_string">Enter a message</string>

    <string name="B">B</string>
    <string name="A">A</string>
    <string name="C">C</string>
    <string name="H">H</string>
    <string name="U">U</string>
    <string name="S">S</string>
    <string name="title_activity_drunk_mode">DrunkModeActivity</string>
    <string name="plus_string">+</string>
    <string name="friends_string">Friends</string>
    <string name="your_friends_profile_string">Your Friend\'s Profile</string>
    <string name="add_friend_string">Add Friend</string>
    <string name="search_hint">Search for friends</string>
    <string name="result_string">Results</string>
    <string name="no_results_string">Your search had no matches!</string>
    <string name="create_account_string">Create an account</string>
    <string name="login_string">Login</string>
    <string name="settings_string">Settings</string>
    <string name="drunk_mode_string">Drunk Mode</string>
    <string name="drunk_mode_off_string">Drunk Mode Off</string>

    <string name="heading_search_friends">Search for Friends</string>
    <string name="heading_friends">My Friends</string>
    <string name="heading_buddies">My Buddies</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_string">Location</string>
    <string name="take_picture_string">Take a Photo</string>
    <string name="add_buddy_string">Buddy Up</string>
    <string name="title_activity_going_out_settings">GoingOutSettingsActivity</string>


</resources>
