<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="urmc.drinkingapp.SignUpFragment">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_string"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/edit_text_name_sign_up"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_name_sign_up"
        android:hint="@string/enter_last_name_string"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/edit_text_last_name_sign_up"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_last_name_sign_up"
        android:hint="@string/enter_email_string"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/edit_text_enter_email_sign_up"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_string"
        android:layout_below="@id/edit_text_enter_email_sign_up"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/edit_text_enter_password_sign_up"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_enter_password_sign_up"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_string"
            android:id="@+id/button_cancel_sign_up"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_string"
            android:layout_marginStart="10dp"
            android:id="@+id/button_sign_up_sing_up"/>

    </LinearLayout>

</RelativeLayout>
