<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="urmc.drinkingapp.LoginFragment">

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_string"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/edit_text_enter_email"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_string"
        android:layout_below="@id/edit_text_enter_email"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/edit_text_enter_password"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_enter_password"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_string"
            android:id="@+id/button_sign_in"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_string"
            android:layout_marginStart="10dp"
            android:id="@+id/button_sign_up"/>

    </LinearLayout>

</RelativeLayout>
