<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="urmc.drinkingapp.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/profile_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/noprofilephoto"
            android:id="@+id/image_view_profile_pic"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_string"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/text_view_fullname_profile"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_string"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/text_view_email_profile"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_string"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_edit_profile"/>


    </LinearLayout>


</RelativeLayout>
