<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="urmc.drinkingapp.EditProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/edit_profile_string"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_profile_pic_string"
            android:id="@+id/button_change_profile_pic"
            android:layout_gravity="center_horizontal"/>

            -->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_change_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPinkOrange"
            fancy:fb_focusColor="@color/colorPinkOrangeToggle"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/change_profile_pic_string"
            fancy:fb_textColor="#FFFFFF" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_view_profile_pic_edit_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/noprofilephoto"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <!--
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/noprofilephoto"
            android:id="@+id/image_view_profile_pic_edit_profile"
            android:layout_gravity="center_horizontal"/>

            -->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name_string"
            android:textSize="25sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:id="@+id/edit_text_fullname_profile"
            android:hint="@string/fullname_hint_string"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_string"
            android:textStyle="italic"
            android:textSize="20sp"
            android:padding="5dp"
            android:id="@+id/edit_text_email_profile"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:hint="@string/email_hint_string"
            android:layout_gravity="center_horizontal"/>

        <!--

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ok_string"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_ok_edit_profile"/>

            -->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_ok_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPinkOrange"
            fancy:fb_focusColor="@color/colorPinkOrangeToggle"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/ok_string"
            fancy:fb_textColor="#FFFFFF" />


    </LinearLayout>

</RelativeLayout>
