<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="urmc.drinkingapp.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/your_friends_profile_string"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/noprofilephoto"
            android:id="@+id/image_view_profile_pic_expanded_profile_fragment"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_string"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/text_view_fullname_profile_expanded_profile_fragment"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_string"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_add_friend_expanded_profile_fragment"/>

    </LinearLayout>


</RelativeLayout>
