<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="urmc.drinkingapp.LoginFragment">


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_string"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/edit_text_enter_email"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_string"
        android:layout_below="@id/edit_text_enter_email"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/edit_text_enter_password"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_enter_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear_layout_online_signin_fragment">

        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_string"
            android:id="@+id/button_sign_in"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_string"
            android:layout_marginStart="10dp"
            android:id="@+id/button_sign_up"/>

            -->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPinkOrange"
            fancy:fb_focusColor="@color/colorPinkOrangeToggle"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/create_account_string"
            fancy:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPinkOrange"
            fancy:fb_focusColor="@color/colorPinkOrangeToggle"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/login_string"
            fancy:fb_textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_online_signin_fragment"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_twitter_online_sign_in"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#55acee"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconResource="@drawable/twitter"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_gplus_online_sign_in"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#dd4b39"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconResource="@drawable/gplus"
            fancy:fb_radius="64dp">
        </mehdi.sakout.fancybuttons.FancyButton>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_facebook_online_sign_in"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#3b5998"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconResource="@drawable/facebook"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF" />

    </LinearLayout>





</RelativeLayout>
