<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="urmc.drinkingapp.MainActivity">

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="45dp"
        android:text="BOTCHUS"
        android:textStyle="bold"/>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_analyzing_text_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/text_view_app_name"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPinkOrange"
        fancy:fb_focusColor="@color/colorPinkOrangeToggle"
        fancy:fb_radius="30dp"
        fancy:fb_text="Analyzing text"
        fancy:fb_textColor="#FFFFFF" />


    <!--<TextView-->
        <!--android:layout_width=""-->
        <!--android:layout_height="" />-->

    <!--

    <Switch
        android:text="Drunk Mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/switch_main_activity"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp" />

        -->

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/main_activity_graph"
        android:layout_below="@id/button_analyzing_text_main_activity"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"/>

<!--
    <Button
        android:text="Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

        -->


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_profile_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/main_activity_graph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPinkOrange"
        fancy:fb_focusColor="@color/colorPinkOrangeToggle"
        fancy:fb_radius="100dp"
        fancy:fb_text="@string/profile_title"
        fancy:fb_textColor="#FFFFFF" />



    <!--
    <Button
        android:text="My Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_profile_main_activity"
        android:layout_marginBottom="48dp"
        android:layout_alignBottom="@+id/button_friends_main_activity"
        android:layout_centerHorizontal="true" />
        -->
<!--
    <Button
        android:text="Friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_friends_main_activity"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button_profile_main_activity"
        android:layout_alignEnd="@+id/button_profile_main_activity" />

        -->

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_friends_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_centerVertical="false"
        android:layout_below="@id/button_profile_main_activity"
        android:layout_alignStart="@+id/button_profile_main_activity"
        android:layout_alignEnd="@+id/button_profile_main_activity"
        android:layout_centerHorizontal="true"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPinkOrange"
        fancy:fb_focusColor="@color/colorPinkOrangeToggle"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/friends_string"
        fancy:fb_textColor="#FFFFFF" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_out_setting_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:layout_centerVertical="false"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/button_friends_main_activity"
        android:layout_centerHorizontal="true"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPinkOrange"
        fancy:fb_focusColor="@color/colorPinkOrangeToggle"
        fancy:fb_radius="30dp"
        fancy:fb_text="Going out settings"
        fancy:fb_textColor="#FFFFFF" />

    <ng.max.slideview.SlideView
        android:id="@+id/switch_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonBackgroundColor="@color/White"
        app:slideBackgroundColor="@color/colorPinkOrange"
        android:layout_below="@id/button_out_setting_main_activity"
        app:slideText="@string/drunk_mode_string"
        app:slideTextColor="@color/White"
        app:animateSlideText="true"
        app:reverseSlide="false"
        app:strokeColor="@color/White"/>




</RelativeLayout>
